src/sass/style.scss
@import 'reset';

@import 'vendor.scss';
@import 'semantic-grid';
@import 'variables';
@import 'mixins';
@import '../fonts/MyFontsWebfontsKit.css';

body, html { height: 100%; }

body {
  @include Gibson-Light;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  font-size: 18px;
  word-wrap: break-word;
  word-break: break-word;
}

strong { @include Gibson-Regular; }

.clear {
  clear: both;

  &.feature {
    clear: both;
  }

  &.feature-both {
    clear: none;
  }
}

a {
  @include transition(color, 0.1s, ease-in-out);
  text-decoration: none;
  color: $orange;

  &:hover { color: $blue; }
}


////////////////
// NAVIGATION //
////////////////

.main-navigation {
  top: 0px;
  z-index: 99;
  height: 105px;
  width: 100%;
  background: rgba(255, 255, 255, 0.98);
  box-shadow: 0 2px 3px rgba(0,0,0,.05);
  padding: 35px 0;

  .logo {
    position: relative;
    margin-left: 50px;
  }

  .menu-items {
    float: right;
    margin-right: 50px;
    margin-top: -20px;
  }

  li {
    @include Gibson-Regular;
    list-style-type: none;
    float: left;
    font-size: 15px;
    padding-right: 45px;
    @include transition(all, 0.2s, ease-in-out);
  }

  a {
    @include transition(color, 0.1s, ease-in-out);
    color: $grey;
    text-decoration: none;

    &:hover { color: $orange; }
  }

  .login {
    @include button($orange, $white, $orange, $white, $blue, $blue);
    top: -1px;
    margin-right: -5px;
    border-radius: 5px 0px 0px 5px;
  }

  .get-started {
    @include button($white, $orange, $orange, $white, $blue, $blue);
    top: -1px;
  }

}

.mobile-menu {
	display: none;
}

.sidenav-sticky-wrapper {
  width: 260px;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;

  &.fixedsticky-container {
    position: absolute;
  }
}

.sidenav {
  top: 145px;
  width: 180px;
  opacity: 0.5;
  margin-top: 40px;
  @include transition(opacity, 0.5s, ease-in-out);

  &:hover { opacity: 1.0; }

  li {
    list-style-type: none;
    @include Gibson-Regular;
    font-size: 16px;
    margin-bottom: 15px;
    letter-spacing: 0.01em;
    line-height: 26px;

    a { color: $grey;
      &:hover { color: $orange; }
    }

    &.current a {
      border-left: 3px solid $orange;
      padding-left: 20px;
      margin-left: -23px;
      color: $orange;
    }
  }

  &.text-page {
    margin-right: 40px;
  }

  &.fixedsticky-on {
    margin-top: 0px;
  }
}

/////////////////
// TYPOGRAPHY //
////////////////

h1 {
  font-size: 64px;
  line-height: 74px;
  margin-bottom: 30px;
  letter-spacing: -0.01em;
}

h2 {
  @include Gibson-Light;
  color: $grey;
  font-size: 46px;
  line-height: 60px;
  letter-spacing: 0.00em;

  &.centered {
    padding-bottom: 50px;
    max-width: 700px;
    text-align: center;
    margin: 0 auto 40px;
  }
}

h3 {
  font-size: 24px;
  @include Gibson-Regular;
  margin-bottom: 20px;

}

.subpage-content h4 {
  font-size: 18px;
  @include Gibson-Regular;
  margin-bottom: 10px;
}


h6 {
  @include Gibson-Light;
  color: $grey;
  font-size: 13px;
  letter-spacing: 8px;
  text-transform: uppercase;
  border-bottom: 1px solid #CCC;

  &.reasons, &.stories-title {
    text-align: center;
    margin: 130px auto 65px;
    padding-bottom: 30px;
  }

  &.marketplace-design, &.track-manage {
    margin: 100px 0 30px;
    padding-bottom: 15px;
  }

  &.reasons { width: 400px; } // Onko tahan parempaa ratkaisua?

  &.stories-title, &.story-page { width: 225px; } // Onko tahan parempaa ratkaisua?

  &.marketplace-design { width: 280px; } // Onko tahan parempaa ratkaisua?

  &.track-manage { width: 220px; } // Onko tahan parempaa ratkaisua?

  &.payments { width: 124px; margin: 150px 0 40px; padding-bottom: 15px; } // Onko tahan parempaa ratkaisua?

  &.story-page { text-align: center; margin: 100px auto 50px; padding-bottom: 30px;}

}

.feature h6 {
  @include Gibson-Regular;
  font-size: 11px;
  letter-spacing: 5px!important;
  margin-bottom: 25px;
  padding-bottom: 15px;
}




////////////
// LAYOUT //
////////////

.main-wrapper {
  @include Gibson-Light;
  max-width: 1140px;
  margin: 0 auto;

  &.pricing {
    position: relative;
    top: -120px;
  }

  &.text-page {
    max-width: 950px;
    width: 90%;
  }

  position: relative;
}

.logo {
  width: 165px;
  height: auto;
}

a.button { @include button($white, $orange, $orange, $white, $blue, $blue); }

.subpage-content {
  max-width: 865px;
  width: 95%;
  margin-left: 260px;
  height: auto;
  margin-top: 28px;
  margin-bottom: 65px;

  &.text-only {
    margin-top: 58px;
    max-width: 700px;
    width: 100%;
    font-size: 16px;
    line-height: 26px;
    padding-top: 40px;
    padding-bottom: 65px;

    h3 {
	    margin-top: 50px;
    }

    p { margin-bottom: 30px; }

    p.updated {
      font-size: 14px;
      color: #999;
      margin-bottom: 20px;
    }

    p.important-privacy {
      font-size: 30px;
      line-height: 42px;
      font-family:  Gibson-LightIt;
    }

    ol { counter-reset: item; }

    ol li {
      display: block;
      position: relative;
    }

    ol li:before {
      content: counters(item, ".")".";
      counter-increment: item;
      position: absolute;
      margin-right: 100%;
      right: 10px; /* space between number and text */
    }
  }
}



//////////////////////
// HOMEPAGE / HERO //
/////////////////////

.hero .logo {
  position: relative;
  top: 0;
  margin-bottom: 100px;
}
/* ... */

